# tornado-file-server

./: .gitignore  LICENSE  README.md  install_tornado.sh  pyproject.toml  requirements.txt  run.sh  run_server_in_preview_mode.sh  run_tornado_file_server.sh  setup.cfg  tornado_file_server.py
docker/: Dockerfile  entrypoint.sh
tornado_file_server/: __init__.py  check_file_types.py  get_ip.py  python_version.py  serving.py  tornado_file_server.py
