[metadata]
name = tornado_file_server
version = 1.1
author = Yafei Zhao
author_email = zhaoyafei0210@gmail.com
description = A tornado-based file server 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/walkoncross/tornado-file-server
project_urls =
    Bug Tracker = https://github.com/walkoncross/tornado-file-server/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=2.7

[options.packages.find]
where = ./